--- a/index.html
+++ b/index.html
@@ -437,7 +437,9 @@
                     <li class="nav-item">
                         <a href="consciousness-therapy-studio.html" class="nav-link" style="background: linear-gradient(45deg, #2d1b69, #667eea, #764ba2); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🧘 Consciousness Therapy 🧘</a>
                     </li>
-
+                    <li class="nav-item">
+                        <a href="aurora-borealis-studio.html" class="nav-link" style="background: linear-gradient(45deg, #00c9ff, #92fe9d, #74ebd5); color: #2d1b69; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🌌 Aurora Borealis 🌌</a>
+                    </li>
                     <li class="nav-item">
                         <a href="northern-lights/northern-lights-aurora.html" class="nav-link" style="background: linear-gradient(45deg, #667eea, #764ba2, #74ebd5); color: #ffffff; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">✨ Northern Lights ✨</a>
                     </li>
