--- a/index.html
+++ b/index.html
@@ -461,6 +461,9 @@
                     <li class="nav-item">
                         <a href="zen-mode-visualizer.html" class="nav-link" style="background: linear-gradient(45deg, #2d1b69, #11998e, #38ef7d); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🧘 Zen Mode 🧘</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="crystalline-meditation-3D.html" class="nav-link" style="background: linear-gradient(45deg, #2d1b69, #11998e, #38ef7d); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🔮 crystal healing 🔮</a>
+                    </li>
 
                     
                     <!-- Community -->
