--- a/index.html
+++ b/index.html
@@ -467,6 +467,9 @@
                       <li class="nav-item">
                         <a href="zero-point-energy-field.html" class="nav-link" style="background: linear-gradient(45deg, #2d1b69, #11998e, #38ef7d); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">💠 Zero Point Energy 💠</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="harmonic_visualizer.html" class="nav-link" style="background: linear-gradient(45deg, #2d1b69, #11998e, #38ef7d); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">💿 Harmonic Visuals 💿</a>
+                    </li>
 
                     
                     <!-- Community -->
