--- a/index.html
+++ b/index.html
@@ -417,6 +417,9 @@
                         <a href="pattern-variation-engine.html" class="nav-link" style="background: linear-gradient(45deg, #ff6b35, #f7931e); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🔄 Pattern Variation 🔄</a>
                     </li>
                     <li class="nav-item">
+                        <a href="cosmic-beat-studio.html" class="nav-link" style="background: linear-gradient(45deg, #ff6b35, #f7931e); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">⚛🔊 Cosmic Beat Studio 🔊</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="sacred-geometry-studio.html" class="nav-link" style="background: linear-gradient(45deg, #667eea, #764ba2, #8e44ad); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">⬡ Sacred Geometry ⬡</a>
                     </li>
                     <li class="nav-item">
