--- a/index.html
+++ b/index.html
@@ -368,6 +368,9 @@
                         <a href="forest-pattern-generator.html" class="nav-link" style="background: linear-gradient(45deg, #2d5016, #4a7c28); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🌲 Forest Generator 🌲</a>
                     </li>
                     <li class="nav-item">
+                        <a href="advanced-military-camo.html" class="nav-link" style="background: linear-gradient(45deg, #2d1b69, #11998e, #38ef7d); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🪖 Military Camo 🪖</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="frequency-analyzer.html" class="nav-link" style="background: linear-gradient(45deg, #00ff88, #7cff50); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">📊 Frequency Analyzer 📊</a>
                     </li>
                     <li class="nav-item">
