--- a/index.html
+++ b/index.html
@@ -429,6 +429,9 @@
                         <a href="cosmic-visualization-studio.html" class="nav-link" style="background: linear-gradient(45deg, #1a1a2e, #16213e, #0f0f23); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.8); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🌌 Cosmic Studio 🌌</a>
                     </li>
                     <li class="nav-item">
+                        <a href="spectral-mandala.html" class="nav-link" style="background: linear-gradient(45deg, #2d1b69, #11998e, #38ef7d); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">⚛️ Spectral Mandala ⚛️</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="cosmic-cosmos/cosmic-tesselations.html" class="nav-link" style="background: linear-gradient(45deg, #4b0082, #8a2be2, #9932cc); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🪐 Cosmic Cosmos 🪐</a>
                     </li>
                     <li class="nav-item">
