--- a/index.html
+++ b/index.html
@@ -499,6 +499,9 @@
                     <li class="nav-item">
                         <a href="plasma-consciousness.html" class="nav-link" style="background: linear-gradient(45deg, #2d1b69, #11998e, #38ef7d); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🌀 Plasma Consciousness 🌀</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="record-demo.html" class="nav-link" style="background: linear-gradient(45deg, #2d1b69, #11998e, #38ef7d); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🌀 record demo 🌀</a>
+                    </li>
                     <!-- Community -->
                     <li class="nav-item">
                         <a href="community.html" class="nav-link" style="background: linear-gradient(45deg, #0088cc, #005f99); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">👥 Community 👥</a>
