--- a/index.html
+++ b/index.html
@@ -506,6 +506,9 @@
                     <li class="nav-item">
                         <a href="community.html" class="nav-link" style="background: linear-gradient(45deg, #0088cc, #005f99); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">👥 Community 👥</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="kaleidoscope-mirror.html" class="nav-link" style="background: linear-gradient(45deg, #2d1b69, #11998e, #38ef7d); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🌀 Kaleidoscope Mirror 🌀</a>
+                    </li>
                     
                     <!-- Production Tools -->
                     <li class="nav-item">
