--- a/index.html
+++ b/index.html
@@ -332,10 +332,10 @@
     <a href="advanced-3D-cymatics.html" class="nav-link" style="background: linear-gradient(45deg, #00c9ff, #92fe9d, #74ebd5); color: #2d1b69; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">💠 3D Cymatics 💠</a>
 </li>
 <li class="nav-item">
-    <a href="advanced-color-studio.html" class="nav-link" style="background: linear-gradient(45deg, #00d2ff, #3a7bd5); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🎨 Color Studio 🎨</a>
+    <a href="advanced-color-studio.html" class="nav-link" style="background: linear-gradient(45deg, #00d2ff, #3a7bd5); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🎨 Advanced Color Studio 🎨</a>
 </li>
 <li class="nav-item">
-    <a href="advanced-military-camo.html" class="nav-link" style="background: linear-gradient(45deg, #2d1b69, #11998e, #38ef7d); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🪖 Military Camo 🪖</a>
+    <a href="advanced-military-camo.html" class="nav-link" style="background: linear-gradient(45deg, #2d1b69, #11998e, #38ef7d); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🪖 Ai Military Camo 🪖</a>
 </li>
 <li class="nav-item">
     <a href="ai-viral-content-studio.html" class="nav-link" style="background: linear-gradient(45deg, #ff6b6b, #ee5a24, #ffa502); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🚀 AI Viral Studio 🚀</a>
@@ -347,19 +347,19 @@
     <a href="aurora-nebula-studio/aurora-nebula.html" class="nav-link" style="background: linear-gradient(45deg, #00ffaa, #00aaff, #aa00ff, #ffaa00); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">✨ Aurora Nebula ✨</a>
 </li>
 <li class="nav-item">
-    <a href="binaural-beats.html" class="nav-link" style="background: linear-gradient(45deg, #ff6b35, #ff8c42); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🎧 Sound Therapy 🎧</a>
+    <a href="binaural-beats.html" class="nav-link" style="background: linear-gradient(45deg, #ff6b35, #ff8c42); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🎧 Advanced Sound Therapy 🎧</a>
 </li>
 <li class="nav-item">
     <a href="butterfly-draw-studio.html" class="nav-link" style="background: linear-gradient(45deg, #ff9a9e, #feca57, #48cae4, #f72585); color: #74ebd5; text-shadow: 0 0 10px rgba(247, 37, 133, 0.8); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🦋 Butterfly Draw Studio 🦋</a>
 </li>
 <li class="nav-item">
-    <a href="canva-authentic-leaf/index.html" class="nav-link" style="background: linear-gradient(45deg, #4caf50, #00e676, #76ff03); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🍃 Authentic Canva 🍃</a>
+    <a href="canva-authentic-leaf/index.html" class="nav-link" style="background: linear-gradient(45deg, #4caf50, #00e676, #76ff03); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🍃 Canva Authentic 🍃</a>
 </li>
 <li class="nav-item">
-    <a href="chrome-spectrogram/index.html" class="nav-link" style="background: linear-gradient(45deg, #4285f4, #34a853, #fbbc05, #ea4335); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🚀 Simplified Chrome Lab 🚀</a>
+    <a href="chrome-spectrogram/index.html" class="nav-link" style="background: linear-gradient(45deg, #4285f4, #34a853, #fbbc05, #ea4335); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🚀 Chrome Lab 🚀</a>
 </li>
 <li class="nav-item">
-    <a href="chrome-spectrogram-analyzer.html" class="nav-link" style="background: linear-gradient(45deg, #74ebd5, #acb6e5, #ff9a9e); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🐦 Natural Spectrogram 🐦</a>
+    <a href="chrome-spectrogram-analyzer.html" class="nav-link" style="background: linear-gradient(45deg, #74ebd5, #acb6e5, #ff9a9e); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🐦 Chrome Spectrogram 🐦</a>
 </li>
 <li class="nav-item">
     <a href="community.html" class="nav-link" style="background: linear-gradient(45deg, #0088cc, #005f99); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">👥 Community 👥</a>
@@ -371,7 +371,7 @@
     <a href="consciousness-therapy-studio.html" class="nav-link" style="background: linear-gradient(45deg, #2d1b69, #667eea, #764ba2); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🧘 Consciousness Therapy 🧘</a>
 </li>
 <li class="nav-item">
-    <a href="cosmic-accident-generator.html" class="nav-link" style="background: linear-gradient(45deg, #ff6b6b, #4ecdc4, #45b7d1, #96ceb4, #feca57); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🌌 BIG BANG 🌌</a>
+    <a href="cosmic-accident-generator.html" class="nav-link" style="background: linear-gradient(45deg, #ff6b6b, #4ecdc4, #45b7d1, #96ceb4, #feca57); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🌌 Cosmic Accident 🌌</a>
 </li>
 <li class="nav-item">
     <a href="cosmic-beat-studio.html" class="nav-link" style="background: linear-gradient(45deg, #ff6b35, #f7931e); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">⚛🔊 Cosmic Beat Studio 🔊</a>
@@ -392,7 +392,7 @@
     <a href="cymatics-simulator.html" class="nav-link" style="background: linear-gradient(45deg, #667eea, #764ba2, #8e44ad); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🌊 Cymatics 🌊</a>
 </li>
 <li class="nav-item">
-    <a href="design-flows-binary-codes/binary-codes-design-flows.html" class="nav-link" style="background: linear-gradient(45deg, #00ff41, #00d4aa, #74ebd5); color: #1a1a1a; text-shadow: 0 0 10px rgba(0, 255, 65, 0.8); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">💾 Binary Design Flow 💾</a>
+    <a href="design-flows-binary-codes/binary-codes-design-flows.html" class="nav-link" style="background: linear-gradient(45deg, #00ff41, #00d4aa, #74ebd5); color: #1a1a1a; text-shadow: 0 0 10px rgba(0, 255, 65, 0.8); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">💾 Code Binary Design Flow 💾</a>
 </li>
 <li class="nav-item">
     <a href="design-inspiration-board.html" class="nav-link" style="background: linear-gradient(45deg, #e74c3c, #c0392b); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">💡 Design Inspiration 💡</a>
@@ -449,7 +449,7 @@
     <a href="particle-portrait-studio.html" class="nav-link" style="background: linear-gradient(45deg, #c2985a, #4a5c2a, #74ebd5, #ff6b35); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.8); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🎨 Particle Portrait Studio 🎨</a>
 </li>
 <li class="nav-item">
-    <a href="pattern-learning-path.html" class="nav-link" style="background: linear-gradient(45deg, #27ae60, #2ecc71); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🎓 Learning Path 🎓</a>
+    <a href="pattern-learning-path.html" class="nav-link" style="background: linear-gradient(45deg, #27ae60, #2ecc71); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🎓 Pattern Learning Path 🎓</a>
 </li>
 <li class="nav-item">
     <a href="pattern-library.html" class="nav-link" style="background: linear-gradient(45deg, #27ae60, #2ecc71); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">📚 Pattern Library 📚</a>
@@ -488,7 +488,7 @@
     <a href="sacred-geometry-studio.html" class="nav-link" style="background: linear-gradient(45deg, #667eea, #764ba2, #8e44ad); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">⬡ Sacred Geometry ⬡</a>
 </li>
 <li class="nav-item">
-    <a href="simple-pattern-counter.html" class="nav-link" style="background: linear-gradient(45deg, #7cff50, #44ff00); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px;">🎯 500 Challenge 🎯</a>
+    <a href="simple-pattern-counter.html" class="nav-link" style="background: linear-gradient(45deg, #7cff50, #44ff00); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px;">🎯 S500 Challenge 🎯</a>
 </li>
 <li class="nav-item">
     <a href="simple-tracer.html" class="nav-link" style="background: linear-gradient(45deg, #7cff50, #00ff88); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">✏️ Simple Tracer ✏️</a>
@@ -515,7 +515,7 @@
     <a href="water-cymatics-studio/water-cymatics-studio.html" class="nav-link" style="background: linear-gradient(45deg, #00bfff, #0080ff, #40e0d0, #00ffff, #87ceeb); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">💧 Water Cymatics 💧</a>
 </li>
 <li class="nav-item">
-    <a href="water-cymatics-studio-simple/simple-water-cymatics.html" class="nav-link" style="background: linear-gradient(45deg, #00bfff, #40e0d0, #87ceeb); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🌊 Simple Cymatics 🌊</a>
+    <a href="water-cymatics-studio-simple/simple-water-cymatics.html" class="nav-link" style="background: linear-gradient(45deg, #00bfff, #40e0d0, #87ceeb); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🌊 Water Simple Cymatics 🌊</a>
 </li>
 <li class="nav-item">
     <a href="zen-mode-visualizer.html" class="nav-link" style="background: linear-gradient(45deg, #2d1b69, #11998e, #38ef7d); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🧘 Zen Mode 🧘</a>
