--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
     <a href="tiktok-logo-enhancer.html" class="nav-link" style="background: linear-gradient(45deg, #ff1744, #9c27b0); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">📱 TikTok Logo 📱</a>
 </li>
 <li class="nav-item">
-    <a href="Ultimate_kaleidoscope.html" class="nav-link" style="background: linear-gradient(45deg, #2d1b69, #11998e, #38ef7d); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🌀 Ultimate Kaleidoscope 🌀</a>
+    <a href="ultimate_kaleidoscope.html" class="nav-link" style="background: linear-gradient(45deg, #2d1b69, #11998e, #38ef7d); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🌀 Ultimate Kaleidoscope 🌀</a>
 </li>
 <li class="nav-item">
     <a href="wallpaper-mandala-replicator.html" class="nav-link" style="background: linear-gradient(45deg, #ff6b9d, #c44569, #9c27b0); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🕉️ Wallpaper Mandala 🕉️</a>
