--- a/ultimate_kaleidoscope.html
+++ b/ultimate_kaleidoscope.html
@@ -360,7 +360,7 @@
         <br>• Hybrid: Manual + auto
     </div>
 
-    PART 2 - Add this right after Part 1 (continuing from where we left off):<script>
+<script>
         // Canvas Setup
         const canvas = document.getElementById('canvas');
         const ctx = canvas.getContext('2d');
