--- a/index.html
+++ b/index.html
@@ -452,8 +452,11 @@
     <a href="pattern-learning-path.html" class="nav-link" style="background: linear-gradient(45deg, #27ae60, #2ecc71); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🎓 Pattern Learning Path 🎓</a>
 </li>
 <li class="nav-item">
-    <a href="pattern-library.html" class="nav-link" style="background: linear-gradient(45deg, #27ae60, #2ecc71); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">📚 Pattern Library 📚</a>
+    <a href="kaleidoscope-test.html" class="nav-link" style="background: linear-gradient(45deg, #27ae60, #2ecc71); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🪄 Kaleidoscope Test 🪄</a>
 </li>
+<li class="nav-item">
+    <a href="pattern-library.html" class="nav-link" style="background: linear-gradient(45deg, #27ae60, #2ecc71); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">📚 Pattern Library 📚</a>
+</li>                    
 <li class="nav-item">
     <a href="pattern-mathematics.html" class="nav-link" style="background: linear-gradient(45deg, #00d2ff, #3a7bd5); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🔢 Pattern Mathematics 🔢</a>
 </li>
