--- a/index.html
+++ b/index.html
@@ -1331,7 +1331,8 @@
         }
         
         // Cosmic particles system removed to prevent freezing
-
+        <div id="cosmicAtmosphere" class="background"></div>
+    </script>
         // Initialize when DOM is loaded
         document.addEventListener('DOMContentLoaded', function() {
             // Animation initialization removed to prevent freezing
@@ -1341,5 +1342,4 @@
     </script>
 </body>
 </html>
-<div class="background"></div>
 
