--- a/index.html
+++ b/index.html
@@ -208,23 +208,9 @@
             }
         }
 
-        /* Hamburger Menu Styling */
-        .nav-toggle {
-            display: none;
-            flex-direction: column;
-            cursor: pointer;
-            z-index: 1001;
-        }
-
-        .bar {
-            width: 25px;
-            height: 3px;
-            background: linear-gradient(45deg, #667eea, #764ba2);
-            margin: 3px 0;
-            transition: all 0.6s ease;
-            border-radius: 2px;
-            box-shadow: 0 0 8px rgba(116, 235, 213, 0.4);
-        }
+        /* Hamburger Menu Styling - Now Controlled by responsive.css*/
+        /* Inline styles removed to allow responsive.css to control hamburger visibility */
+        
 
         /* Sacred Geometry Hamburger Animation */
         .hamburger.active .bar:nth-child(1) {
