--- a/index.html
+++ b/index.html
@@ -327,10 +327,10 @@
     <a href="ai-viral-content-studio.html" class="nav-link" style="background: linear-gradient(45deg, #ff6b6b, #ee5a24, #ffa502); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🚀 AI Viral Studio 🚀</a>
 </li>
 <li class="nav-item">
-    <a href="aurora-borealis-studio.html" class="nav-link" style="background: linear-gradient(45deg, #00ff88, #7cff50, #4a90e2, #9370db); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🌌 Aurora Borealis 🌌</a>
+    <a href="meditation_kaleidoscope.html" class="nav-link" style="background: linear-gradient(45deg, #00ff88, #7cff50, #4a90e2, #9370db); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🌌 meditation kaleidoscope 🌌</a>
 </li>
 <li class="nav-item">
-    <a href="aurora-nebula-studio/aurora-nebula.html" class="nav-link" style="background: linear-gradient(45deg, #00ffaa, #00aaff, #aa00ff, #ffaa00); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">✨ Aurora Nebula ✨</a>
+    <a href="aurora-nebula-studio/aurora-nebula.html" class="nav-link" style="background: linear-gradient(45deg, #00ffaa, #00aaff, #aa00ff, #ffaa00); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">✨ nebula studio ✨</a>
 </li>
 <li class="nav-item">
     <a href="binaural-beats.html" class="nav-link" style="background: linear-gradient(45deg, #ff6b35, #ff8c42); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🎧 Advanced Sound Therapy 🎧</a>
