--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     <a href="advanced-military-camo.html" class="nav-link" style="background: linear-gradient(45deg, #2d1b69, #11998e, #38ef7d); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🪖 Ai Military Camo 🪖</a>
 </li>
 <li class="nav-item">
-    <a href="ai-viral-content-studio.html" class="nav-link" style="background: linear-gradient(45deg, #ff6b6b, #ee5a24, #ffa502); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🚀 AI Viral Studio 🚀</a>
+    <a href="ai-quote-social-media.html" class="nav-link" style="background: linear-gradient(45deg, #ff6b6b, #ee5a24, #ffa502); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🚀 AI Viral Quotes 🚀</a>
 </li>
 <li class="nav-item">
     <a href="meditation_kaleidoscope.html" class="nav-link" style="background: linear-gradient(45deg, #00ff88, #7cff50, #4a90e2, #9370db); color: #74ebd5; text-shadow: 0 0 10px rgba(116, 235, 213, 0.5); padding: 8px 16px; border-radius: 20px; margin-left: 10px; font-weight: 600;">🌌 meditation kaleidoscope 🌌</a>
